# fortran

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cmake.yml  pause-community-contributions.yml
config/: CMakeLists.txt  create_fortran_test.py  exercise_readme.go.tmpl  maintainers.json  update_cmake_for_exercises.sh
docs/: ABOUT.md  INSTALLATION.md  LEARNING.md  MAINTAINERS.md  RESOURCES.md  TESTS.md  config.json
exercises/acronym/: CMakeLists.txt  README.md
exercises/acronym/.meta/: acronym.f90
exercises/bob/: CMakeLists.txt  README.md  TesterMain.f90  bob.f90  bob.fun  bob_test.f90  example.f90
exercises/bob/testlib/: TesterMain.f90
exercises/collatz-conjecture/: README.md  collatz_conjecture_test.f90
exercises/difference-of-squares/: CMakeLists.txt  README.md  difference_of_squares.f90  difference_of_squares.fun  difference_of_squares_test.f90  example.f90
exercises/difference-of-squares/.meta/: difference-of-squares.f90
exercises/difference-of-squares/testlib/: TesterMain.f90
exercises/hamming/: CMakeLists.txt  README.md  example.f90  hamming.fun  hamming_test.f90
exercises/hello-world/: CMakeLists.txt  README.md  example.f90  hello_world.f90  hello_world_test.f90
exercises/hello_world/: hello_world.fun
exercises/matrix/: README.md  example.f90  mat2.txt  mat4.txt  mat7.txt  matrix.f90  matrix_test.f90
exercises/matrix/.meta/: matrix.f90
exercises/matrix/test_files/: mat.txt  mat3.txt  mat8.txt
exercises/nth-prime/: CMakeLists.txt  README.md  example.f90  nth_prime.f90  nth_prime_test.f90
exercises/pangram/: README.md  TesterMain.f90  example.f90  pangram.f90  pangram.fun  pangram_test.f90
exercises/pangram/.meta/: pangram.f90
exercises/practice/acronym/: acronym.f90  acronym_test.f90
exercises/practice/acronym/.meta/: config.json  template.j2
exercises/practice/allergies/: allergies.f90  allergies_test.f90
exercises/practice/allergies/.meta/: config.json  example.f90  template.j2  tests.toml
exercises/practice/armstrong-numbers/: CMakeLists.txt  armstrong_numbers.f90  armstrong_numbers_test.f90
exercises/practice/armstrong-numbers/.meta/: config.json  example.f90  template.j2  tests.toml
exercises/practice/binary-search/: binary_search.f90  binary_search_test.f90
exercises/practice/binary-search/.meta/: config.json  example.f90  template.j2
exercises/practice/bob/: README.md  bob.f90  bob_test.f90
exercises/practice/bob/.meta/: config.json  example.f90  template.j2
exercises/practice/collatz-conjecture/: CMakeLists.txt  collatz_conjecture.f90  collatz_conjecture_test.f90  example.f90
exercises/practice/collatz-conjecture/.meta/: config.json  template.j2
exercises/practice/darts/: darts.f90  darts_test.f90
exercises/practice/darts/.meta/: config.json  example.f90  template.j2
exercises/practice/difference-of-squares/: CMakeLists.txt  README.md  difference_of_squares.f90  difference_of_squares_test.f90
exercises/practice/difference-of-squares/.meta/: config.json  template.j2
exercises/practice/eliuds-eggs/: eliuds_eggs.f90  eliuds_eggs_test.f90
exercises/practice/eliuds-eggs/.meta/: config.json  example.f90  template.j2
exercises/practice/grains/: grains.f90  grains_test.f90
exercises/practice/grains/.docs/: hints.md  instructions.md
exercises/practice/grains/.meta/: config.json  example.f90  template.j2
exercises/practice/hamming/: CMakeLists.txt  README.md  hamming.f90  hamming_test.f90
exercises/practice/hamming/.meta/: config.json  example.f90  template.j2  tests.toml
exercises/practice/hello-world/: README.md  hello_world.f90  hello_world_test.f90
exercises/practice/high-scores/: high_scores.f90  high_scores_test.f90
exercises/practice/isbn-verifier/: CMakeLists.txt  isbn_verifier.f90  isbn_verifier_test.f90
exercises/practice/isogram/: isogram.f90  isogram_test.f90
exercises/practice/leap/: leap.f90  leap_test.f90
exercises/practice/linked-list/: linked_list.f90  linked_list_test.f90
exercises/practice/luhn/: luhn.f90  luhn_test.f90
exercises/practice/matrix/: matrix.f90  matrix_test.f90
exercises/practice/nth-prime/: nth_prime.f90  nth_prime_test.f90
exercises/practice/pangram/: README.md  pangram.f90  pangram_test.f90
exercises/practice/perfect-numbers/: perfect_numbers.f90  perfect_numbers_test.f90
exercises/practice/protein-translation/: protein_translation.f90  protein_translation_test.f90
exercises/practice/queen-attack/: queen_attack.f90  queen_attack_test.f90
exercises/practice/raindrops/: example.f90  raindrops_test.f90
exercises/practice/rational-numbers/: rational_numbers.f90  rational_numbers_test.f90
exercises/practice/reverse-string/: reverse_string.f90  reverse_string_test.f90
exercises/practice/rna-transcription/: rna_transcription.f90  rna_transcription_test.f90
exercises/practice/roman-numerals/: roman_numerals.f90  roman_numerals_test.f90
exercises/practice/saddle-points/: CMakeLists.txt  saddle_points.f90  saddle_points_test.f90  saddle_points_test_helper.f90
exercises/practice/secret-handshake/: secret_handshake.f90  secret_handshake_test.f90
exercises/practice/sieve/: sieve.f90
exercises/practice/space-age/: space_age.f90  space_age_test.f90
exercises/practice/sum-of-multiples/: sum_of_multiples.f90  sum_of_multiples_test.f90
exercises/practice/triangle/: triangle.f90  triangle_test.f90
exercises/practice/two-fer/: two_fer.f90  two_fer_test.f90
exercises/practice/yacht/: yacht.f90  yacht_test.f90
exercises/raindrops/: CMakeLists.txt  README.md  example.f90  raindrops.f90  raindrops.fun  raindrops_test.f90
exercises/raindrops/testlib/: CMakeLists.txt
exercises/rna-transcription/: CMakeLists.txt  README.md  example.f90  rna_transcription.fun  rna_transcription_test.f90
exercises/rna-transcription/.meta/: rna-transcription.f90
exercises/shared/.docs/: help.md  tests.md
testlib/: CMakeLists.txt  TesterMain.f90
testlib_unittest/: CMakeLists.txt  results.json  testlib_unittest.f90
(+84 files in other folders)
